--- a/src/assets/pages/menu/menu.scss
+++ b/src/assets/pages/menu/menu.scss
@@ -6,9 +6,15 @@
 
 @media screen and (max-width: 480px) {
     .menu__content__block {
-        margin: 0px;
-        background-color: red;
+        // margin: 0 0 0 20px;
+        width: 100%;
+        // background-color: red;
         max-width: 480px;
         height: 100%;
+    }
+}
+@media screen and (max-width: 1200px) {
+    .menu__content__block {
+        width: 100%;
     }
 }
