--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -13,6 +13,10 @@ body {
     background-color: $background-color
 }
 
+router-link {
+    text-decoration: none !important;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital@0;1&display=swap');
 @import './pages/home.scss';
 @import './pages/Header/header.scss';
