--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -18,6 +18,7 @@ router-link {
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital@0;1&display=swap');
+@import './pages/Details/details.scss';
 @import './pages/home.scss';
 @import './pages/Header/header.scss';
 @import './pages/Header/components/banner.scss';
